show all blog post links to any logged in user

--- a/app/views/blog/posts/_lead_in.html.erb
+++ b/app/views/blog/posts/_lead_in.html.erb
@@ -9,7 +9,7 @@
     <% last_p_index = (post.body.index('</p>', 700) || 700) %>
     <%=raw post.body.truncate(last_p_index+5, :separator => "\n", :omission => '') %>
 
-    <p style="float: right; margin-right: 60px;"><span class="fake_button"><%= link_to_delete_post(post) %> | <%= link_to_edit_post(post) %></span> <%= link_to_read_more(post) %></p>
+    <p style="float: right; margin-right: 60px;"><% if current_user and current_user.logged_in? %><span class="fake_button"><%= link_to_delete_post(post) %></span> <span class="fake_button"><%= link_to_edit_post(post) %></span><% end %> <%= link_to_read_more(post) %></p>
     
   </div>
 </div>
