--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -11,6 +11,15 @@
 </p>
 <% end %>
 
+<% if @categories.size > 0 %>
+<p>
+  <strong><em>Category matches:</em></strong> 
+  <% @categories.each do |category| %>
+    <%= link_to category.name, category %>
+  <% end %>
+</p>
+<% end %>
+
 <table cellspacing="2px" cellpadding="0" class="nice_table tablesorter">
   <thead>
     <tr>
@@ -23,13 +32,6 @@
   </thead>
   <tbody>
     <% @content_pages.each do |content_page| %>
-<% if @search_phrase %>
-<!--
-<%= strip_tags(content_page.body) %>
-<%= excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75) %>
-<%= highlight(excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75) || '', @search_phrase) %>
--->
-<% end %>
       <tr>
         <td style="width:20%;">
           <%= link_to truncate(content_page.name, :length => 75), content_page %>
@@ -40,7 +42,7 @@
         <td><%= @search_phrase ? highlight(excerpt(strip_tags(content_page.body), @search_phrase, :radius => 75) || '', @search_phrase) :
                     truncate(strip_tags(content_page.body), :length => 150) %></td>
         <td><%= content_page.publish_on ? content_page.publish_on.strftime('%m/%d/%Y') : '' %></td>
-        <td><%=raw content_page.categories.map { |cat| link_to cat.name, cat }.join(', ') %></td>
+        <td><%=raw highlight(content_page.categories.map { |cat| link_to cat.name, cat }.join(', '), @search_phrase) %></td>
         <% if is_admin? %>
           <td>
             <%= link_to '<span class="ui-icon ui-icon-document"/>'.html_safe, edit_content_page_path(content_page),
