fix to not break content page index

--- a/app/views/content_pages/index.html.erb
+++ b/app/views/content_pages/index.html.erb
@@ -11,7 +11,7 @@
 </p>
 <% end %>
 
-<% if @categories.size > 0 %>
+<% if @categories and @categories.size > 0 %>
 <p>
   <strong><em>Category matches:</em></strong> 
   <% @categories.each do |category| %>
