--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -1,43 +1,33 @@
 <div class="container">
   <div class="span-24 last">
-    <div class="top_menu bg_palette_1 text_palette_8">
+    <div class="header">
       <%= top_menu %>
     </div>
   </div>
 
-  <div class="span-6">
-    <div class="logo_box"><%= logo_image %></div>
+  <div class="column span-6">
+    <div class="side_pane">
+      <div class="logo_box"><%= logo_image %></div>
 
-    <div class="side_menu bg_palette_5 border_palette_5 text_palette_8">
-      <%= side_menu %>
+      <div class="side_menu">
+        <%= side_menu %>
+      </div>
+      <div class="user_box">
+        <%= user_box %>
+      </div>
     </div>
-    <br/><br/><br/>
-    <div class="side_menu bg_palette_5 border_palette_5 text_palette_8 user_box">
-      <%= user_box %>
-    </div>
-
   </div>
 
-
-
   <div class="span-18 last">
-    <% if flash[:notice] -%>
-      <div class="flash_message notice_message"><%=raw flash[:notice] %></div>
-    <% end -%>
-    <% if flash[:warning] -%>
-      <div class="flash_message warning_message"><%=raw flash[:warning] %></div>
-    <% end -%>
-    <% if flash[:error] -%>
-      <div class="flash_message error_message"><%=raw flash[:error] %></div>
-    <% end -%>
-
     <div class="base_content">
+      <%= render :partial => '/layouts/flash_boxes' %>
+
       <%= yield %>
     </div>
   </div>
 
   <div class="span-24 last">
-    <div class="footer bg_palette_1 text_palette_8">
+    <div class="footer">
       <%= site_footer %>
     </div>
   </div>
