--- a/app/views/blog/posts/_lead_in.html.erb
+++ b/app/views/blog/posts/_lead_in.html.erb
@@ -6,10 +6,12 @@
   <div style="padding: 10px;">
     <p class="small_text"><em><%= nice_date(post.created_at) %></em></p>
     
-    <% last_p_index = (post.body.index('</p>', 700) || 700) %>
-    <%=raw post.body.truncate(last_p_index+5, :separator => "\n", :omission => '') %>
+    <%= truncated_post_body(post) %>
 
-    <p style="float: right; margin-right: 60px;"><% if current_user and current_user.logged_in? %><span class="fake_button"><%= link_to_delete_post(post) %></span> <span class="fake_button"><%= link_to_edit_post(post) %></span><% end %> <%= link_to_read_more(post) %></p>
+    <p style="float: right; margin-right: 60px;">
+      <%= post_tools(post) %>
+      <%= link_to_read_more(post) %>
+    </p>
     
   </div>
 </div>
