centralize authz w/ cancan
separate publish functionality from std update

--- a/app/views/blog/posts/_lead_in.html.erb
+++ b/app/views/blog/posts/_lead_in.html.erb
@@ -2,6 +2,10 @@
   <%= render :partial => 'blog/posts/author', :object => post.author %>
   
   <h3 style="margin-bottom: 5px;"><%= link_to post.title, blog_post_path(post) %></h3>
+  
+  <p style="text-align: right;">
+    <%= post_tools(post) %>
+  </p>
 
   <div style="padding: 10px;">
     <p class="small_text"><em><%= nice_date(post.created_at) %></em></p>
@@ -9,7 +13,6 @@
     <%= truncated_post_body(post) %>
 
     <p style="float: right; margin-right: 60px;">
-      <%= post_tools(post) %>
       <%= link_to_read_more(post) %>
     </p>
     
