submit/approve/delete anonymous comments

--- a/app/views/site_settings/admin.html.erb
+++ b/app/views/site_settings/admin.html.erb
@@ -8,7 +8,7 @@
   <li><%= link_to image_tag('icons/folder_page.png') + ' Manage Files', file_attachments_path %></li>
 </ul>
 <ul class="side_by_side">
-  <li><%= link_to image_tag('icons/page_white_stack.png') + ' List of Blog Posts', blog_posts_path %></li>
+  <li><%= link_to image_tag('icons/page_white_stack.png') + ' List of Blog Posts', blog_dashboard_path %></li>
 </ul>
  
 <br/>
