--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -1,1 +1,10 @@
 <%= render :partial => "blog/posts/post", :object => @post %>
+<h3><%= pluralize(@comments.count, 'Comment') %></h3>
+<% if @comments.count > 0 %>
+<div class="span-16 last comments">
+  <%= render :partial => "blog/comments/comment", :collection => @comments.all %>  
+</div>
+<% end %>
+<div class="span-16 last">
+  <%= render :partial => "blog/comments/form" %>
+</div>
