tweaking css files

--- a/app/views/site_settings/admin.html.erb
+++ b/app/views/site_settings/admin.html.erb
@@ -30,7 +30,7 @@
 <ul class="side_by_side">
   <li><%= link_to image_tag('icons/wrench.png') + ' Site-wide Settings', site_settings_path %></li>
   <li><%= link_to image_tag('icons/layout_content.png') + ' Theme/Styling', :controller => :themes %></li>
-  <li><%= link_to image_tag('icons/page_white_code.png') + ' Custom CSS', :controller => :themes, :action => :css_editor %></li>
+<!--  <li><%= link_to image_tag('icons/page_white_code.png') + ' Custom CSS', :controller => :themes, :action => :css_editor %></li> -->
 </ul>
 
 <br/>
