--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -27,6 +27,7 @@
 
 
 <p class="admin_links">
-  <%= link_to 'Site Administration', admin_site_settings_path %> |
-  <%= link_to 'Custom CSS', :controller => :themes, :action => :css_editor %>
+  <%= link_to 'Site Administration', admin_site_settings_path %>
+  <!-- |
+  <%= link_to 'Custom CSS', :controller => :themes, :action => :css_editor %> -->
 </p>
