--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -1,4 +1,5 @@
 <%= render :partial => "blog/posts/post", :object => @post %>
+<% if @post.published %>
 <h3><%= pluralize(@comments.count, 'Comment') %></h3>
 <% if @comments.count > 0 %>
 <div class="span-16 last comments">
@@ -8,3 +9,6 @@
 <div class="span-16 last">
   <%= render :partial => "blog/comments/form" %>
 </div>
+<% else %>
+<p class="notice">Comments may be submitted once this post is published.</p>
+<% end %>
