--- a/app/views/blog/posts/_post.html.erb
+++ b/app/views/blog/posts/_post.html.erb
@@ -1,11 +1,11 @@
-<%= render :partial => 'blog/posts/author', :object => post.author %>
+<div class="post">
+  <%= render :partial => 'blog/posts/author', :object => post.author %>
 
-<h1><%= link_to_blog_category_post(post) %></h1>
+  <h1><%= link_to_blog_category_post(post) %></h1>
 
-<%= post_tools(post) %>
+  <%= post_tools(post) %>
 
-<p class="small_text"><em><%= nice_date(post.created_at) %></em></p>
+  <p class="small_text"><em><%= nice_date(post.created_at) %></em></p>
 
-<div>
   <%=raw post.body %>
 </div>
