--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -2,5 +2,7 @@
 
 <p style="border-top: #000066 solid 1px; text-align: right;"><%= link_to_new_post %></p>
 
+<div class="posts">
 <%= render :partial => 'blog/posts/lead_in', :collection => @posts,
            :as => :post %>
+</div>
