--- a/app/views/dashboards/blog.html.erb
+++ b/app/views/dashboards/blog.html.erb
@@ -1,14 +1,43 @@
+<%
+pending_comment_heading  = pluralize(@pending_comments.count, "Pending Comments")
+approved_comment_heading = pluralize(@approved_comments.count, "Approved Comments")
+draft_post_heading       = pluralize(@draft_posts.count, "Draft Post")
+published_post_heading   = pluralize(@published_posts.count, "Published Post")
+%>
+
 <h1>Blog</h1>
 
-<h2><%= pluralize(@pending_comments.count, "Pending Comments") %></h2>
+<p>
+  <%= fake_button(link_to(pending_comment_heading, :anchor => 'pending_comments')) %>
+  <%= fake_button(link_to(draft_post_heading, :anchor => 'draft_posts')) %>
+  <%= fake_button(link_to(approved_comment_heading, :anchor => 'approved_comments')) %>
+  <%= fake_button(link_to(published_post_heading, :anchor => 'published_posts')) %>
+</p>
+
+<h2><a name="pending_comments"></a><%= pending_comment_heading %></h2>
 <% if @pending_comments.count > 0 %>
 <div class="comments">
   <%= render :partial => "blog/comments/pending_comment", :collection => @pending_comments, :as => :comment %>
 </div>
 <% end %>
 
-<h2><%= pluralize(@published_posts.count, "Published Post")%></h2>
+<h2><a name="draft_posts"></a><%= draft_post_heading %></h2>
+<% if @draft_posts.count > 0 %>
+<div class="posts">
+  <%= render :partial => "blog/posts/lead_in", :collection => @draft_posts, :as => :post %>
+</div>
+<% end %>
 
-<h2><%= pluralize(@draft_posts.count, "Draft Post") %></h2>
+<h2><a name="published_posts"></a><%= published_post_heading %></h2>
+<% if @published_posts.count > 0 %>
+<div class="posts">
+  <%= render :partial => "blog/posts/lead_in", :collection => @published_posts, :as => :post %>
+</div>
+<% end %>
 
-<h2><%= pluralize(@approved_comments.count, "Approved Comments") %></h2>
+<h2><a name="approved_comments"></a><%= approved_comment_heading %></h2>
+<% if @approved_comments.count > 0 %>
+<div class="comments">
+  <%= render @approved_comments %>
+</div>
+<% end %>
