navigate blog post revision histories revert to some past post revision recover from initial deletes
updated acts_as_revisable

--- a/app/views/blog/posts/_post.html.erb
+++ b/app/views/blog/posts/_post.html.erb
@@ -3,7 +3,7 @@
 
   <h1><%= link_to_blog_category_post(post) %></h1>
 
-  <%= post_tools(post) %>
+  <%= post_tools(post) if post.current_revision == post %>
 
   <p class="small_text"><em><%= nice_date(post.created_at) %></em></p>
 
