--- a/app/views/blog/posts/_lead_in.html.erb
+++ b/app/views/blog/posts/_lead_in.html.erb
@@ -1,7 +1,7 @@
 <div style="padding: 15px;">
   <%= render :partial => 'blog/posts/author', :object => post.author %>
   
-  <h3 style="margin-bottom: 5px;"><%= link_to post.title, blog_post_path(post) %></h3>
+  <h3 style="margin-bottom: 5px;"><%= "[Draft] " unless post.published %><%= link_to post.title, blog_post_path(post) %></h3>
 
   <div style="padding: 10px;">
     <%= post_tools(post) %>
