--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,9 +1,10 @@
-<h1>SIGnetwork Tech Topics</h1>
-
-<p style="border-top: #000066 solid 1px; text-align: right;">
+<p class="right">
   <%= link_to_blog_admin %>
   <%= link_to_new_post %>
+  <%= link_to_rss blog_posts_url(:atom) %>
 </p>
+
+<h1><%= site_title %> <%= blog_title %></h1>
 
 <div class="posts">
 <%= render :partial => 'blog/posts/lead_in', :collection => @posts,
