--- a/app/views/blog/posts/_author.html.erb
+++ b/app/views/blog/posts/_author.html.erb
@@ -1,4 +1,4 @@
-<a class="gravatar_wrapper" onclick="alert('should this point to a user profile or should it load all posts by <%= author.name %>?');return false;" href="/blog/posts/by/<%= author.first_name %>:<%= author.last_name %>">
+<a class="gravatar_wrapper" href="<%= by_author_blog_posts_path(author.id) %>">
     <%=raw gravatar_for author, :size => 50 %><br>
     <%= author.fullname %>
 </a>
