small fixes to new layouts

--- a/app/views/themes/css_editor.html.erb
+++ b/app/views/themes/css_editor.html.erb
@@ -1,4 +1,6 @@
-<h1>Theme Settings</h1>
+<h1>CSS Override</h1>
+
+<p>Warning, setting CSS here will negate any theme CSS.</p>
 
 <div class="edit_content_box">
   <%= form_tag( { :action => :update_css } ) do  %>
