--- a/app/views/site_settings/admin.html.erb
+++ b/app/views/site_settings/admin.html.erb
@@ -34,6 +34,7 @@
   <li><%= link_to image_tag('icons/wrench.png') + ' Site-wide Settings', site_settings_path %></li>
   <li><%= link_to image_tag('icons/layout_content.png') + ' Theme/Styling', :controller => :themes %></li>
   <li><%= link_to image_tag('icons/page_white_code.png') + ' Custom CSS', :controller => :themes, :action => :css_editor %></li>
+  <li><%= link_to image_tag('icons/page_white_code.png') + ' Custom Screen (Base) CSS', :controller => :themes, :action => :css_editor, :name => 'screen' %></li>
 </ul>
 
 <br/>
