--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -165,6 +165,16 @@ a.delete_x:hover { color: #F33; text-decoration: none; border: none; }
   font-size: 12px;
 }
 
+
+/* lists */
+ul.category_list li:hover { background: #eee; }
+ul.category_list li li:hover { background: #f9f9f9; }
+ul.category_list li li li:hover { background: #e9e9e9; }
+ul.category_list li div { display: inline-block; width: 20%; }
+ul.category_list li div.category_name { width: 50%; }
+.ui-state-highlight { height: 1.5em; line-height: 1.2em; }
+
+
 /* Month View, Basic Week View, Basic Day View
 ------------------------------------------------------------------------*/
 
