--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -42,6 +42,7 @@ input#user_openid_identifier, input#user_session_openid_identifier {
   list-style-type: none;
   padding: 0 5px;
   margin: 0 5px;
+  position: relative;
 }
 
 .big_button {
@@ -177,19 +178,6 @@ ul.category_list li div.category_name { width: 50%; }
 
 /* menu */
 
-ul.top_menu { margin: 0; }
-
-ul.top_menu li {
-  display: inline;
-  margin: 0 0.5em;
-  position: relative;
-}
-
-ul.top_menu li a:link, ul.top_menu li a:visited {
-  padding: 0.5em;
-}
-ul.top_menu a:hover { text-decoration:none; }
-
 div.mega_menu {
   z-index: 99;
   position:absolute;
@@ -203,10 +191,10 @@ div.mega_menu {
   -moz-box-shadow: 0px 5px 15px #999;
   -webkit-box-shadow: 0px 5px 15px #999; 
   box-shadow: 0px 5px 15px #999;
-  background: #7d7e7d; /* old browsers */
-  background: -moz-linear-gradient(top, #7d7e7d 0%, #0e0e0e 100%); /* firefox */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e)); /* webkit */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* ie */
+  background: #EEE; /* old browsers */
+  background: -moz-linear-gradient(top, #AAAAAA 0%, #EEEEEE 100%); /* firefox */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#AAAAAA), color-stop(100%,#EEEEEE)); /* webkit */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#AAAAAA', endColorstr='#EEEEEE',GradientType=0 ); /* ie */
 }
 
 .mega_menu h4 { 
