--- a/app/views/blog/posts/edit.html.erb
+++ b/app/views/blog/posts/edit.html.erb
@@ -28,6 +28,6 @@
 <%= initialize_ckeditor('blog_post[body]', {
   :filebrowserUploadUrl => upload_handler_blog_post_path(@post, {
     :authenticity_token => form_authenticity_token
-  })
+  }), :toolbar => 'Mid', :height => '500px'
 }) %>
 <%= ckeditor_confirm_exit(un_edit_blog_post_path(@post)) %>
