added two new site settings for special footers
footer on blog pages and footer on event show pages
fixes #13

--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -12,3 +12,5 @@
 <% else %>
 <p class="notice">Comments may be submitted once this post is published.</p>
 <% end %>
+
+<%= inner_footer("blog") %> 
