--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -11,3 +11,5 @@
 <%= render :partial => 'blog/posts/lead_in', :collection => @posts,
            :as => :post %>
 </div>
+
+<%= inner_footer("blog") %> 
