added functions for calendars in ContentPage
you can use a fullsized calendar or a mini. uses events controller
closes #11

--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -20,6 +20,8 @@
         <li>[[TreeCategories]] &nbsp; &nbsp; <em>create a tree-like list of all categories and their pages</em></li>
         <li>[[TreeCategories Cat A, Cat B, Cat C]] &nbsp; &nbsp; <em>create a tree-like list of categories named "Cat A", "Cat B", "Cat C", and their pages</em></li>
         <li>[[SearchBox]] &nbsp; &nbsp; <em>displays a search form</em></li>
+        <li>[[Calendar]] &nbsp; &nbsp; <em>displays a full-sized calendar</em></li>
+        <li>[[MiniCalendar]] &nbsp; &nbsp; <em>displays a mini-sized calendar</em></li>
       </ul>
       <div style="padding-left: 25px;">
         Options for List functions <em>(add to end before closing brackets)</em>:
