--- a/app/views/content_pages/_form.html.erb
+++ b/app/views/content_pages/_form.html.erb
@@ -36,7 +36,14 @@
       <em>Note: after creating this new page, you will be able to edit the body</em>
     <% else %>
       <%= f.text_area :body, :rows => 10, :cols => 80, :style => 'width: 90%' %>
-    <% end %>
+      <br/>
+      <% if @content_page.auxiliary_body.blank? -%>
+        [<%= link_to 'edit auxiliary content (ex. side bar)', { :toggle => 'aux_body' }, :class => 'show_hide_link' %>]
+      <% end -%>
+      <div style="<%= "display:none" if @content_page.auxiliary_body.blank? %>" class="aux_body">
+        <%= f.text_area :auxiliary_body, :rows => 10, :cols => 80, :style => 'width: 90%' %>
+      </div>
+    <% end -%>
   </p>
 
   <% unless @content_page.special =~ /Menu/ %>
@@ -82,6 +89,11 @@
     :filebrowserUploadUrl => upload_handler_content_page_path(@content_page, {
       :authenticity_token => form_authenticity_token
     }), :toolbar => 'Mid', :height => '500px'
+  }) %>
+  <%= initialize_ckeditor('content_page[auxiliary_body]', {
+    :filebrowserUploadUrl => upload_handler_content_page_path(@content_page, {
+      :authenticity_token => form_authenticity_token
+    }), :toolbar => 'Mid', :height => '250px'
   }) %>
   <script type="text/javascript">
     //<![CDATA[
