partially added some options to userbox

--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -13,7 +13,7 @@
         <%= side_menu %>
       </div>
       <div class="user_box">
-        <%= user_box %>
+        <%= user_box :include_line_breaks => false %>
       </div>
     </div>
   </div>
