corrected the spelling of separator

--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -15,7 +15,7 @@
       <div class="user_box">
         <%# defaults:
             user_box :include_line_breaks => true, :include_blog_link => true, 
-                :include_events_link => true, :link_seperator => ' | ' %>
+                :include_events_link => true, :link_separator => ' | ' %>
         <%= user_box %>
       </div>
     </div>
