one more html_safe for userbox helper

--- a/themes/layouts/default.html.erb
+++ b/themes/layouts/default.html.erb
@@ -16,7 +16,7 @@
         <%# defaults:
             user_box :include_line_breaks => true, :include_blog_link => true, 
                 :include_events_link => true, :link_separator => ' | ' %>
-        <%= user_box %>
+        <%= user_box :link_separator => '&nbsp; | &nbsp;' %>
       </div>
     </div>
   </div>
